dashboard/oauth-proxy1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: kubernetes-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: "oauth2-proxy"
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.3.0
        imagePullPolicy: IfNotPresent
        args:
        - --provider=oidc
        - --email-domain=gitma.de
        - --cookie-domain=.kube.gitma.de
        - --upstream=file:///dev/null #https://kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local/
        - --http-address=0.0.0.0:4180
        - --oidc-issuer-url=https://kc.gitma.de/auth/realms/k8s
        - --ssl-upstream-insecure-skip-verify=true
        - --ssl-insecure-skip-verify=true
        - --auth-logging=true
        #- --cookie-secure=false
        - --cookie-name=oauth_dash
        - --cookie-refresh=4m30s
        - --scope=openid email profile
        - --skip-provider-button=true
        - --whitelist-domain=.kube.gitma.de
        - --pass-authorization-header=true
        - --pass-access-token=true
        - --set-authorization-header=true
        - --set-xauthrequest=true

        ports:
        - containerPort: 4180
          protocol: TCP
      - name: echo
        image: ealen/echo-server:latest
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: kubernetes-dashboard
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 4180
  - name: echo
    port: 3001
    protocol: TCP
    targetPort: 80
  selector:
    k8s-app: oauth2-proxy
